# Forkit_Dev

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
docs/: identity-spec.md  oss-architecture.md  release-checklist-v0.1.0.md
examples/: deterministic_identity_demo.py  langchain_quickstart.py  langchain_sync_quickstart.py  langgraph_quickstart.py  langgraph_runtime_quickstart.py  langgraph_sync_quickstart.py  openclaw_quickstart.py  register_agent.yaml  register_model.yaml  sdk_quickstart.py  self_host_sync_quickstart.py  use_cases.py
forkit/: __init__.py
forkit/cli/: __init__.py  main.py
forkit/domain/: __init__.py  hashing.py  identity.py  integrity.py  lineage.py
forkit/registry/: __init__.py  db.py  local.py
forkit/schemas/: __init__.py  agent.py  base.py  enums.py  model.py  types.py
forkit/schemas/pydantic/: __init__.py  _types.py  agent.py  model.py
forkit/sdk/: __init__.py  client.py
forkit/server/: __init__.py  app.py  config.py  deps.py  sync_store.py
forkit/sync/: bridge.py
forkit_core/: __init__.py
forkit_core/cli/: main.py
forkit_core/hashing/: __init__.py  engine.py
forkit_core/lineage/: __init__.py  graph.py
forkit_core/registry/: __init__.py  db.py  local.py
forkit_core/schemas/: __init__.py  _compat.py  agent_passport.py  base.py  model_passport.py
forkit_core/sdk/: __init__.py  client.py
forkit_core/server/: __init__.py
forkit_langchain/: __init__.py  adapter.py
forkit_langgraph/: __init__.py  adapter.py
forkit_openclaw/: __init__.py  adapter.py
launch/: github-repo-polish-checklist.md
publish/github-ci-demo/: README.md  forkit-passport.json
publish/huggingface-demo/: SOURCE.md
scripts/: demo_passports.py  export_hf_model_card.py  generate_passport_template.py  validate_passport.py
tests/: conftest.py  test_examples.py  test_hashing.py  test_langchain_adapter.py  test_langgraph_adapter.py  test_lineage.py  test_openclaw_adapter.py  test_registry.py  test_schemas.py  test_sdk_compat.py  test_server_bootstrap.py  test_server_export.py  test_server_lineage.py  test_server_registration.py  test_server_sync.py  test_sync_bridge.py  test_sync_store.py  test_use_cases.py
web/: index.html  package-lock.json  package.json
web/src/: App.tsx  index.css  types.ts
(+25 files in other folders)
